# AI-Racer-2026

./: .env  Dockerfile  FOXGLOVE.txt  autonomy.launch.py  controller_bridge.py  docker-compose.yml  simulation.launch.py
.devcontainer/: devcontainer.json
ros2_ws/src/racer_ros/: .info_packages.txt.swp  custom_message.txt  info_packages.txt  launch_files.txt  rostwo_inspections.txt
ros2_ws/src/racer_ros/AEB_System/: package.xml  setup.cfg  setup.py
ros2_ws/src/racer_ros/AEB_System/AEB_System/: safety_node.py
ros2_ws/src/racer_ros/AEB_System/config/: safety_params.yaml
ros2_ws/src/racer_ros/AEB_System/launch/: safety_node.launch.py
ros2_ws/src/racer_ros/autonomy/: package.xml  setup.py
ros2_ws/src/racer_ros/autonomy/launch/: autonomy.launch.py  autonomy_sim.launch.py
ros2_ws/src/racer_ros/cpp_test_package/: CMakeLists.txt  package.xml
ros2_ws/src/racer_ros/emergency-braking/: emergency-braking-info.txt  package.xml  setup.py
ros2_ws/src/racer_ros/emergency-braking/safety_node/: safety_node.py
ros2_ws/src/racer_ros/follow_the_gap/: package.xml  setup.py
ros2_ws/src/racer_ros/follow_the_gap/config/: gap_params.yaml
ros2_ws/src/racer_ros/follow_the_gap/follow_the_gap/: reactive_node.py
ros2_ws/src/racer_ros/follow_the_gap/launch/: follow_gap.launch.py
ros2_ws/src/racer_ros/movement_node/: package.xml  setup.py
ros2_ws/src/racer_ros/movement_node/config/: movement.yaml
ros2_ws/src/racer_ros/movement_node/movement_node/: trajectory.py
ros2_ws/src/racer_ros/my_custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/racer_ros/my_custom_msgs/msg/: VehicleState.msg
ros2_ws/src/racer_ros/my_python_pkg/: package.xml  setup.py
ros2_ws/src/racer_ros/my_python_pkg/launch/: simple_nodes_launch.py
ros2_ws/src/racer_ros/my_python_pkg/my_python_pkg/: custom_msg_publisher.py  custom_msg_subscriber.py  simple_publisher.py  simple_subscriber.py
ros2_ws/src/racer_ros/testing_ros_language/: CMakeLists.txt  package.xml
ros2_ws/src/racer_ros/testing_ros_language/include/: easy-publish.hpp  easy-subscribe.hpp
ros2_ws/src/racer_ros/testing_ros_language/launch/: test-launch.py
ros2_ws/src/racer_ros/testing_ros_language/src/: easy-publish.cpp
ros2_ws/src/racer_ros/wall_follow/: package.xml  setup.py
ros2_ws/src/racer_ros/wall_follow/config/: wall_follow_params.yaml
ros2_ws/src/racer_ros/wall_follow/launch/: wall_follow.launch.py
ros2_ws/src/racer_ros/wall_follow/wall_follow/: wall_follow_node.py
ros2_ws/src/rc_test_adrian/ros2_ws/follow_the_gap/: package.xml  setup.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/follow_the_gap/: package.xml  setup.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/follow_the_gap/follow_the_gap/: reactive_node.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/my_python_pkg/: package.xml  setup.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/safety_node/: package.xml  setup.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/safety_node/config/: safety_params.yaml
ros2_ws/src/rc_test_adrian/ros2_ws/src/safety_node/launch/: safety_node.launch.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/safety_node/safety_node/: safety_node.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/wall_follow/: package.xml  setup.py
ros2_ws/src/rc_test_adrian/ros2_ws/src/wall_follow/config/: wall_follow_params.yaml
ros2_ws/src/rc_test_adrian/ros2_ws/src/wall_follow/launch/: wall_follow.launch.py
scripts/: deadmans_switch.py  f1tenth_debug_dashboard.html  init_bootstrap.sh  motor_test.py  motor_test_launch.py  motorl_test.py  run_autonomy.sh  servo_test.py  servol_test.py  setup_motor.sh  start_motor.sh  start_vnc.sh
(+1 files in other folders)
